<resources>
    <string name="app_name">Sup Buyer</string>

    // LOGIN + SIGN-UP PAGE
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_password">Return Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="is_supplier">Supplier?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="supplier">Supplier</string>
    <string name="shop_details">Shop Details</string>
    <string name="phone">Phone Number</string>

    //SUPPLIER SIGN UP PAGE
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="upload">Upload Photo</string>
    <string name="done_supplier_sign_up">Open Store</string>
    <string-array name="supplier_types">
        <item>Fish</item>
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Clothes</item>
    </string-array>

    //SUPPLIER ADDING PRODUCT PAGE
    <string name="supplier_adding_product_page">Adding Product</string>
    <string name="product">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="cancel">Cancel</string>
    <string name="approve">Approve</string>


    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>


    //BUYER PAYMENT PAGE
    <string name="buyer">Buyer</string>
    <string name="buyer_payment_page">Payment</string>
    <string name="id">ID</string>
    <string name="full_name">Full Name</string>
    <string name="credit_number">Credit Card Number</string>
    <string name="security_number">Security Number (cvv)</string>
    <string name="pay">Pay</string>
    <string-array name="credit_card_year">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string-array name="credit_card_month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_phone_auth">Phone Auth Activity</string>

    //BUYER MENU
    <string name="log_out">Log out</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="shops">Shop</string>
    <string name="search">Search</string>

    //BUYER SHOP
    <string name="plus_one">+1</string>
    <string name="plus_ten">+10</string>
    <string name="plus_hundred">+100</string>
    <string name="plus_thousand">+1000</string>
    <string name="units">Units:</string>
    <string name="add_to_cart">Add to cart</string>

    //SUPPLIER MENU
    <string name="my_shop">My Shop</string>
    <string name="order_status">Order status:</string>
    <string name="products">Products</string>
    <string name="price">Total price:</string>
    <string name="price_sign">$</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="product_price">Price</string>
    <string name="orders">Orders</string>
    <string name="update_shop">Update Shop</string>
    <string name="edit_product">Edit Product</string>
    <string name="reset">Reset</string>

</resources>