<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/supplier_adding_product_LYT_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <ImageView
        android:id="@+id/supplier_adding_product_IMG_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/vegetables" />

    <TextView
        android:id="@+id/supplier_adding_product_ETXT_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_adding_product_IMG_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/supplier"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/supplier_adding_product_ETXT_page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_adding_product_ETXT_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/supplier_adding_product_page"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/supplier_adding_product_ETXT_page_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_adding_product_ETXT_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="Tomato"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/product"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/supplier_adding_product_ETXT_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="0.5 kg"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/quantity"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/supplier_adding_product_ETXT_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="Doe"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                android:padding="15dp"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/supplier_adding_product_BTN_upload_photo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_corners_button_login"
                android:drawableStart="@drawable/photo"
                android:padding="10dp"
                android:text="@string/upload_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/supplier_adding_product_BTN_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/circle_corners_button_red"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/supplier_adding_product_BTN_approve"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_corners_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/approve"
                android:textColor="@color/white" />

        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>