<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_LYT_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <ImageView
        android:id="@+id/sign_up_IMG_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/vegetables"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/sign_up_LBL_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_IMG_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/sign_up_LBL_sign_up">

        <EditText
            android:id="@+id/sign_up_ETXT_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="John"
            android:background="@drawable/circle_corners_edit_text" />

        <EditText
            android:id="@+id/sign_up_ETXT_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="Doe"
            android:background="@drawable/circle_corners_edit_text" />

        <EditText
            android:id="@+id/sign_up_ETXT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:autofillHints="John.Doe@gmail.com"
            android:background="@drawable/circle_corners_edit_text" />

        <EditText
            android:id="@+id/sign_up_ETXT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:inputType="phone"
            android:textSize="15sp"
            android:autofillHints="0501231234"
            android:background="@drawable/circle_corners_edit_text" />

        <CheckBox
            android:id="@+id/sign_up_CKB_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/supplier"
            android:buttonTint="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_LYT_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/sign_up_BTN_sign_up"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            app:backgroundTint="@color/dark_green_500"
            app:cornerRadius="20dp" />

    </LinearLayout>

</RelativeLayout>