<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buyer_payment_LYT_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <ImageView
        android:id="@+id/buyer_payment_IMG_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/vegetables" />

    <TextView
        android:id="@+id/buyer_payment_ETXT_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyer_payment_IMG_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buyer"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/buyer_payment_ETXT_page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyer_payment_ETXT_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buyer_payment_page"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buyer_payment_ETXT_page_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/buyer_payment_ETXT_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="John Doe 18, Tel-Aviv"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/buyer_payment_ETXT_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="302534021"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/id"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/buyer_payment_ETXT_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="John Doe"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/buyer_payment_ETXT_credit_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="1111 2222 3333 4444"
                android:background="@drawable/circle_corners_edit_text"
                android:inputType="text"
                android:hint="@string/credit_number"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/buyer_payment_ETXT_cvv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="123"
                android:background="@drawable/circle_corners_edit_text"
                android:inputType="text"
                android:hint="@string/security_number"
                android:padding="15dp"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/circle_corners_edit_text"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="Month:" />

                    <Spinner
                        android:id="@+id/buyer_payment_SPN_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/circle_corners_edit_text"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="Year:" />

                    <Spinner
                        android:id="@+id/buyer_payment_SPN_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buyer_payment_BTN_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/circle_corners_button_red"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buyer_payment_BTN_pay"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle_corners_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/pay"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>