<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/supplier_sign_up_LYT_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <ImageView
        android:id="@+id/supplier_sign_up_IMG_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/vegetables" />

    <TextView
        android:id="@+id/supplier_sign_up_ETXT_page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_sign_up_IMG_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/shop_details"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/supplier_sign_up_ETXT_page_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_sign_up_ETXT_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="John Doe Vegetables"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/supplier_sign_up_ETXT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="John Doe 18, Tel-Aviv"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/supplier_sign_up_ETXT_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:autofillHints="Doe"
                android:background="@drawable/circle_corners_edit_text"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                android:padding="15dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/circle_corners_edit_text"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="Type:" />

                <Spinner
                    android:id="@+id/supplier_sign_up_SPN_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/supplier_sign_up_BTN_upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/circle_corners_button_login"
                android:drawableStart="@drawable/photo"
                android:drawablePadding="15dp"
                android:padding="15dp"
                android:text="@string/upload" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/supplier_sign_up_LYT_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/supplier_sign_up_BTN_open_store"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/done_supplier_sign_up"
            app:backgroundTint="@color/dark_green_500"
            app:cornerRadius="20dp" />

    </LinearLayout>
</RelativeLayout>